<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/color_selected_background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.09" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textInfoPos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_8"
        android:text="@string/text_pos"
        android:textColor="?attr/color_title_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRank"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textInfoTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_team"
        android:textColor="?attr/color_title_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineTeam"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/textInfoPos"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textInfoPld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_ptl"
        android:textColor="?attr/color_title_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textInfoW"
        app:layout_constraintStart_toStartOf="@+id/guidelineTeam"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textInfoW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_w"
        android:textColor="?attr/color_title_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textInfoD"
        app:layout_constraintStart_toEndOf="@id/textInfoPld"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textInfoD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_d"
        android:textColor="?attr/color_title_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textInfoL"
        app:layout_constraintStart_toEndOf="@id/textInfoW"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textInfoL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_l"
        android:textColor="?attr/color_title_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textInfoGD"
        app:layout_constraintStart_toEndOf="@id/textInfoD"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textInfoGD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_gd"
        android:textColor="?attr/color_title_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textInfoPts"
        app:layout_constraintStart_toEndOf="@id/textInfoL"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textInfoPts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_pts"
        android:textColor="?attr/color_title_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textInfoGD"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
