<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="java.util.List" />

        <import type="com.example.soccert.data.model.StartingLineup" />

        <import type="com.example.soccert.data.model.Substitute" />

        <import type="com.example.soccert.data.model.Coach" />

        <variable
            name="startingLineups"
            type="List&lt;StartingLineup&gt;" />

        <variable
            name="substitutes"
            type="List&lt;Substitute&gt;" />

        <variable
            name="coaches"
            type="List&lt;Coach&gt;" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textStartingLineup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/color_selected_background"
            android:gravity="center"
            android:padding="@dimen/dp_4"
            android:text="@string/title_starting_lineup"
            android:textColor="?attr/color_title_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerStartingLineups"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:data="@{startingLineups}"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textStartingLineup"
            app:spanCount="2" />

        <TextView
            android:id="@+id/textSubstitute"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:background="?attr/color_selected_background"
            android:gravity="center"
            android:padding="@dimen/dp_4"
            android:text="@string/title_substitute"
            android:textColor="?attr/color_title_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerStartingLineups" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerSubstitutes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:data="@{substitutes}"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textSubstitute"
            app:spanCount="2" />

        <TextView
            android:id="@+id/textCoaches"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:background="?attr/color_selected_background"
            android:gravity="center"
            android:padding="@dimen/dp_4"
            android:text="@string/title_coach"
            android:textColor="?attr/color_title_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerSubstitutes" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerCoaches"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:data="@{coaches}"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textCoaches"
            app:spanCount="2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
