<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="homeVM"
            type="com.example.soccert.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

        <View
            android:id="@+id/viewHeader"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/color_header_footer_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinnerLeagues"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/dp_8"
            android:background="@null"
            android:backgroundTint="?attr/color_title_text"
            android:dropDownWidth="match_parent"
            app:data_spinner="@{homeVM.competition}"
            app:layout_constraintBottom_toBottomOf="@+id/viewHeader"
            app:layout_constraintEnd_toStartOf="@+id/textVertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/viewHeader" />

        <ImageView
            android:id="@+id/imageCountry"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_8"
            android:contentDescription="@null"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@+id/viewHeader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/viewHeader"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textVertical"
            android:layout_width="@dimen/dp_2"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_10"
            android:background="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/viewHeader"
            app:layout_constraintEnd_toStartOf="@+id/imageCountry"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewHeader"
            app:tabMode="fixed"
            app:tabTextAppearance="@style/CustomTabText">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_match_events" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_standing" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_team" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPagerHome"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabHome" />

        <include
            layout="@layout/include_loading"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:loading="@{homeVM.isLoading()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabHome" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
